--- a/index.html
+++ b/index.html
@@ -33,13 +33,28 @@
 							<h2>Galactic dynamics with cosmological simulations<br />
 							of Milky Way sized galaxies.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<!--<ul class="actions">
-						#	<li><a href="#" class="button">Learn More</a></li>
-						#</ul>
-					</section>-->
+						<p>I am currently doing my PhD in Astrophysics, at Universidad Complutense de Madrid. I specialize in cosmological simulations, 
+							which I use to better understand the Milky Way’s dynamics
+						
+						</p>
 
+					</section>
+				<!-- One -->
+
+				<!--	<section id="affiliations">
+					<h5>Affiliations</h5>
+					<div class="row">
+						<img src="images/guaix.png" height="50px" width="50px">
+						<img src="images/iparcos.png" height="50px" width="50px">
+						<a href="#" class="Image"><img src="images/guaix.png" alt="" /></a>
+						<a href="#" class="Image"><img src="images/iparcos.jpg" alt="" /></a>
+						<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+	
+					</div>
+	
+				</section> -->
 				<!-- Two -->
+
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
@@ -74,38 +89,8 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">bego.gcn@gmail.com</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
 
 				<!-- Four -->
 				<!--
@@ -431,13 +416,22 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/conde_bego" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/Bego-GarciaConde" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<!--	<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<!--<li><a href="bego.gcn@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+						<li><a href="https://www.linkedin.com/in/bego%C3%B1a-garc%C3%ADa-conde-752825226/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
-					<ul class="copyright">
+					<!--<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>-->
+				</div>
+				<div class="col-4 col-12-small">
+					<ul class="labeled-icons">
+						<li>
+							<!--<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3><a href="#">bego.gcn@gmail.com</a>-->
+							<a href="#">bego.gcn@gmail.com</a>
+						</li>
 					</ul>
 				</div>
 			</footer>
