--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					in <strong>Astrophysics</strong>.</h1>
 
 				</div>
-				<h9> Python, R.</h9>
+				<h9> Python, R, Matlab.</h9>
 			</header>
 
 		<!-- Main -->
