--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Begoña</strong>, a PhD student<br />
+					<h1><strong>I am Begoña</strong>, a PhD candidate<br />
 					in <strong>Astrophysics</strong>.</h1>
 
 				</div>
-				<!--<h9> Python, R, Matlab.</h9> -->
+				<h9> Science, Astronomy, Computational Astrophysics.</h9> 
 			</header>
 
 		<!-- Main -->
@@ -85,10 +85,9 @@
 				<section id="Programming skills">
 					<h2>Skills</h2>
 
-					<h5> Programming Languages: Python, R, Matlab, Fortran. </h5>
+					<h5> Programming Languages: Python, R, Matlab, Fortran, Linux, bash. </h5>
 					<h5> Advanced statistics: Bayesian, MCMC, multivariate analysis, PCA, advanced visualization of data. </h5>
 					<h5> Code paralelizarion. </h5>
-					<h5> Linux, bash. </h5>
 					<h5> Basic machine learning. </h5>
 
 
