--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 					<h2>Skills</h2>
 
 					<h5> Programming Languages: Python, R, Matlab, Fortran, Linux, bash. </h5>
-					<h5> Advanced statistics: Bayesian, MCMC, multivariate analysis, PCA, advanced visualization of data. </h5>
-					<h5> Code paralelizarion. </h5>
+					<h5> Advanced statistics: Data Science, bayesian statistics, MCMC, multivariate analysis, PCA, advanced visualization of data. </h5>
+					<h5> Code parallelization. </h5>
 					<h5> Basic machine learning. </h5>
 					<h5> Scientific communication. </h5>
 
